[package]
name = "krallbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
twitter-v2 = "0.1.7"
